# NSU_oop_labs

./: .clang-format  .gitignore  README.md
flat_map/: Task 1 - Flat Map.md
flat_map_lab/: CMakeLists.txt  Task 1 - Flat Map.md  main.cpp
flat_map_lab/flat_map/: CMakeLists.txt
flat_map_lab/flat_map/headers/: flat_map.h
flat_map_lab/flat_map/src/: flat_map.cpp
flat_map_lab/flat_map/test/: test_flat_map.cpp
lab_flat_map/flat_map/: CMakeLists.txt
lab_flat_map/flat_map/headers/: flat_map.h
lab_flat_map/flat_map/src/: flat_map.cpp
lab_flat_map/flat_map/test/: test_flat_map.cpp
lab_sound_processor/converter_interface/: CMakeLists.txt
lab_sound_processor/converter_interface/converters/: CMakeLists.txt
lab_sound_processor/converter_interface/converters/bass_boost_converter/: bass_boost.h
lab_sound_processor/converter_interface/converters/converter/: converter.h
lab_sound_processor/converter_interface/converters/mute_converter/: mute.h
lab_sound_processor/converter_interface/include/: converter_interface.h
lab_sound_processor/iostream_errors/: CMakeLists.txt
lab_sound_processor/iostream_errors/include/: iostream_errors.h
lab_sound_processor/iostream_errors/src/: iostream_errors.cpp
lab_sound_processor/sound_processor/: CMakeLists.txt  main.cpp  sound_processor
lab_sound_processor/sound_processor/include/: process.hpp  process_exceptions.hpp
lab_sound_processor/sound_processor/lib_include/converters/: converter.hpp  converters.hpp  factory.hpp  other_tools.hpp
lab_sound_processor/sound_processor/libs/cl_parser/: CMakeLists.txt
lab_sound_processor/sound_processor/libs/converters/: CMakeLists.txt  combine_json.py  converters_description.json
lab_sound_processor/sound_processor/libs/wav/: CMakeLists.txt
lab_sound_processor/sound_processor/process/: CMakeLists.txt
lab_sound_processor/sound_processor/process/include/: process.h
lab_sound_processor/sound_processor/process/src/: process.cpp
lab_sound_processor/sound_processor/src/: main.cpp  process.cpp  process_exceptions.cpp
lab_sound_processor/sound_processor/test/: settings.txt
lab_sound_processor/sound_processor/wav/: CMakeLists.txt
lab_sound_processor/sound_processor/wav/include/: wav.h  wav_reader.h  wav_types.h
lab_sound_processor/sound_processor/wav/src/: wav_reader.cpp
lab_templates/allocator/: CMakeLists.txt
lab_templates/allocator/test/: test_allocator.cpp
lab_templates/templates/allocator/: CMakeLists.txt
lab_templates/templates/allocator/include/: allocator.hpp
lab_templates/templates/allocator/src/: allocator.cpp
lab_templates/templates/allocator/test/: test_allocator.cpp
lab_templates/templates/csv_parser/: CMakeLists.txt
lab_templates/templates/csv_parser/include/: csv_parser.hpp  csv_parser_exceptions.hpp
lab_templates/templates/csv_parser/src/: csv_parser.cpp  csv_parser_exceptions.cpp
lab_templates/templates/csv_parser/test/: test.csv  test1.csv  test2.csv  test_csv_parser.cpp
lab_templates/templates/flat_map/: CMakeLists.txt
lab_templates/templates/flat_map/include/: flat_map.hpp
lab_templates/templates/flat_map/src/: flat_map.cpp
lab_templates/templates/flat_map/test/: test_flat_map.cpp
lab_terminal_based_game/terminal_based_game/: CMakeLists.txt
lab_terminal_based_game/terminal_based_game/draws/: basicmap.json  game_map.json  game_menu.json  game_objects_pos.json  game_screen.json  game_screen.txt  menu_screen.txt  menu_screen_tmp.txt  score.json
lab_terminal_based_game/terminal_based_game/for_save/: game_menu.json  score.json
lab_terminal_based_game/terminal_based_game/game/game_obj/: CMakeLists.txt
lab_terminal_based_game/terminal_based_game/game/screen/: CMakeLists.txt
lab_terminal_based_game/terminal_based_game/include/: process.hpp
lab_terminal_based_game/terminal_based_game/not_used/: game_map.json  game_map1.json  game_screen.json
lab_terminal_based_game/terminal_based_game/not_used/enemy_/: enemy.hpp
lab_terminal_based_game/terminal_based_game/screen/: CMakeLists.txt
lab_terminal_based_game/terminal_based_game/screen/basic_screen/: basic_screen.cpp  basic_screen.hpp
lab_terminal_based_game/terminal_based_game/screen/core_screen/: core_screen.cpp  core_screen.hpp
lab_terminal_based_game/terminal_based_game/screen/game_menu/: game_menu.cpp  game_menu.hpp
lab_terminal_based_game/terminal_based_game/screen/game_screen/: game_screen.cpp  game_screen.hpp
lab_terminal_based_game/terminal_based_game/screen/include/: game_screen.hpp  screen.hpp
lab_terminal_based_game/terminal_based_game/screen/src/: game_screen.cpp
lab_terminal_based_game/terminal_based_game/src/: main.cpp  process.cpp
sound_processor/cl_parser/: CMakeLists.txt
sound_processor/cl_parser/headers/: cl_parser.h
sound_processor/cl_parser/src/: cl_parser.cpp
sound_processor/converter_interface/: CMakeLists.txt
sound_processor/converter_interface/converters/bass_boost_converter/: bass_boost.cpp
sound_processor/converter_interface/converters/include/: converters.h
sound_processor/converter_interface/converters/mix/: mix.cpp  mix.h
sound_processor/converter_interface/converters/mix_converter/: mix.h
sound_processor/converter_interface/converters/mute/: mute.cpp  mute.h
sound_processor/converter_interface/converters/mute_converter/: mute.h
sound_processor/converter_interface/headers/: converter_interface.h
sound_processor/converter_interface/src/: converter_interface.cpp
sound_processor/converter_interfase/: CMakeLists.txt
sound_processor/converter_interfase/converters/: CMakeLists.txt
sound_processor/converter_interfase/converters/mix/: info.json
sound_processor/converter_interfase/converters/mute/: info.json
sound_processor/converter_interfase/headers/: converter_interface.h
sound_processor/converters/: CMakeLists.txt
sound_processor/converters/headers/: converter.h
sound_processor/converters/src/: converter.cpp
sound_processor/converters/src/mix/: mix.cpp
sound_processor/converters/src/mute/: info.json  mute.cpp
sound_processor/lab_sound_processor/: CMakeLists.txt  Task 2 - Sound Processor.md
(+129 files in other folders)
